<resources>
    <string name="app_name">Manual Digital</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Manual Digital</string>
    <string name="nav_header_subtitle">leonardobarbieri_2903@hotmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Avisos</string>
    <string name="menu_webview">Webview</string>
    <string name="menu_montagem">Montagem</string>
    <string name="menu_video">Video</string>
    <string name="menu_ferramentas">Ferramentas</string>
    <string name="menu_componentes">Componentes</string>
    <string name="menu_pecas">Peças</string>
    <string name="menu_produto">Produto</string>


</resources>