<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_ferramentas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_ferramentas" />
        <item
            android:id="@+id/nav_componentes"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_componentes" />
        <item
            android:id="@+id/nav_pecas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_pecas" />
        <item
            android:id="@+id/nav_montagem"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_montagem" />
        <item
            android:id="@+id/nav_produto"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_produto" />
    </group>
</menu>